--- a/src/MarkdownWeb.Git/MarkdownWeb.Git.csproj
+++ b/src/MarkdownWeb.Git/MarkdownWeb.Git.csproj
@@ -1,14 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net451</TargetFramework>
+    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+    <Authors>Jonas Gauffin</Authors>
+    <PackageLicenseUrl>https://opensource.org/licenses/apache-2.0</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/jgauffin/markdownweb</PackageProjectUrl>
+    <MinClientVersion>2.12</MinClientVersion>
+    <Description>Fetch documents through get for MarkdownWeb</Description>
+    <Copyright>© jgauffin 2017</Copyright>
+    <PackageTags>sequence-diagrams markdown html wiki git</PackageTags>
+    <Product>MarkdownWeb ($(TargetFramework))</Product>
+    <IncludeSymbols>true</IncludeSymbols>
+    <GenerateDocumentationFile Condition=" '$(Configuration)' == 'Release' ">true</GenerateDocumentationFile>
+    <DebugType>full</DebugType>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
+    <RepositoryUrl>https://github.com/jgauffin/markdownweb</RepositoryUrl>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.23.1" />
     <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="1.0.164" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="MarkdownWeb">
-      <HintPath>..\..\examples\mvc5\lib\MarkdownWeb.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\MarkdownWeb\MarkdownWeb.csproj" />
   </ItemGroup>
 </Project>
