--- a/src/MarkdownWeb/MarkdownWeb.csproj
+++ b/src/MarkdownWeb/MarkdownWeb.csproj
@@ -1,9 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net451</TargetFramework>
+    <TargetFrameworks>netstandard1.5;net451</TargetFrameworks>
+    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+    <Authors>Jonas Gauffin</Authors>
+    <PackageLicenseUrl>https://opensource.org/licenses/apache-2.0</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/jgauffin/markdownweb</PackageProjectUrl>
+    <MinClientVersion>2.12</MinClientVersion>
+    <Description>Wiki generator with markdown and git support (NetStandard 1.5+ and .NET 4.5.1)</Description>
+    <Copyright>© jgauffin 2017</Copyright>
+    <PackageTags>sequence-diagrams markdown html wiki</PackageTags>
+    <Product>MarkdownWeb ($(TargetFramework))</Product>
+    <IncludeSymbols>true</IncludeSymbols>
+    <GenerateDocumentationFile Condition=" '$(Configuration)' == 'Release' ">true</GenerateDocumentationFile>
+    <DebugType>full</DebugType>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
+    <RepositoryUrl>https://github.com/jgauffin/markdownweb</RepositoryUrl>
+    <AssemblyVersion>1.3.3.0</AssemblyVersion>
+    <FileVersion>1.3.3.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CsQuery" version="1.3.4" />
     <PackageReference Include="Markdig" version="0.13.0" />
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net451'">
+    <PackageReference Include="CsQuery">
+      <Version>1.3.4</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.5'">
+    <PackageReference Include="CsQuery.NetStandard">
+      <Version>1.3.6.1</Version>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
