--- a/src/MarkdownWeb.Git/MarkdownWeb.Git.csproj
+++ b/src/MarkdownWeb.Git/MarkdownWeb.Git.csproj
@@ -16,14 +16,14 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/jgauffin/markdownweb</RepositoryUrl>
-    <PackageReleaseNotes>Changed from fetch to pull</PackageReleaseNotes>
-    <Version>1.0.3</Version>
+    <PackageReleaseNotes>Will delete folder and try again on conflicts.</PackageReleaseNotes>
+    <Version>1.0.4</Version>
   </PropertyGroup>
   <Target Name="PostBuild" BeforeTargets="PostBuildEvent" Condition="'$(TargetFramework)' == 'net451'">
     <Exec Command="copy /y $(TargetPath) $(SolutionDir)..\examples\mvc5\lib" />
   </Target>
   <ItemGroup>
-    <PackageReference Include="LibGit2Sharp" Version="0.25.0-preview-0033" />
+    <PackageReference Include="LibGit2Sharp" Version="0.24.0" />
     <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="1.0.185" />
     <PackageReference Include="netstandard.library" Version="2.0.0" />
   </ItemGroup>
