--- a/src/MarkdownWeb.Git.Tests/MarkdownWeb.Git.Tests.csproj
+++ b/src/MarkdownWeb.Git.Tests/MarkdownWeb.Git.Tests.csproj
@@ -3,17 +3,17 @@
     <TargetFramework>net46</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NSubstitute" version="2.0.3" />
-    <PackageReference Include="FluentAssertions" version="4.19.3" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
-    <PackageReference Include="xunit" version="2.2.0" />
+    <PackageReference Include="NSubstitute" version="3.1.0" />
+    <PackageReference Include="FluentAssertions" version="4.19.4" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="xunit" version="2.3.1" />
     <PackageReference Include="xunit.abstractions" version="2.0.1" />
-    <PackageReference Include="xunit.assert" version="2.2.0" />
-    <PackageReference Include="xunit.core" version="2.2.0" />
-    <PackageReference Include="xunit.extensibility.core" version="2.2.0" />
-    <PackageReference Include="xunit.extensibility.execution" version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-    <PackageReference Include="LibGit2Sharp" Version="0.25.0-preview-0033" />
+    <PackageReference Include="xunit.assert" version="2.3.1" />
+    <PackageReference Include="xunit.core" version="2.3.1" />
+    <PackageReference Include="xunit.extensibility.core" version="2.3.1" />
+    <PackageReference Include="xunit.extensibility.execution" version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="LibGit2Sharp" Version="0.24.0" />
     <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="1.0.185" />
 
   </ItemGroup>
