--- a/src/MarkdownWeb.Git/MarkdownWeb.Git.csproj
+++ b/src/MarkdownWeb.Git/MarkdownWeb.Git.csproj
@@ -6,7 +6,7 @@
     <PackageLicenseUrl>https://opensource.org/licenses/apache-2.0</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/jgauffin/markdownweb</PackageProjectUrl>
     <MinClientVersion>2.12</MinClientVersion>
-    <Description>Fetch documents through get for MarkdownWeb</Description>
+    <Description>Download wiki pages from a git repository (will also fetch updates automatically)</Description>
     <Copyright>© jgauffin 2017</Copyright>
     <PackageTags>sequence-diagrams markdown html wiki git</PackageTags>
     <Product>MarkdownWeb ($(TargetFramework))</Product>
@@ -16,12 +16,17 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/jgauffin/markdownweb</RepositoryUrl>
-    <PackageReleaseNotes>Will delete folder and try again on conflicts.</PackageReleaseNotes>
-    <Version>1.0.4</Version>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageReleaseNotes>Will now create a local master properly and merge all changes.</PackageReleaseNotes>
+    <Version>1.0.5</Version>
+  </PropertyGroup>
+
   <Target Name="PostBuild" BeforeTargets="PostBuildEvent" Condition="'$(TargetFramework)' == 'net451'">
     <Exec Command="copy /y $(TargetPath) $(SolutionDir)..\examples\mvc5\lib" />
   </Target>
+
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.24.0" />
     <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="1.0.185" />
